# SpanSplitter

./: Cargo.toml  README.md
src/: main.rs  otel.rs
