[package]
name = "otel-try"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-otlp = { version = "0.16.0", features = [
    "grpc-tonic",
    "http-proto",
    "reqwest-client",
    "trace",
] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = "0.24.0"
# does not include `tracing-log` feature due to https://github.com/spinkube/containerd-shim-spin/issues/61
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "fmt",
    "ansi",
    "std",
    "env-filter",
    "json",
    "registry",
] }

tokio = { version = "1", features = ["full"] }
anyhow = "1"
